Adds missing compilerArgs  for the checker framework